--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
