--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
