--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
