--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
