--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest --verbose --coverage",
     "typecheck": "tsc --noEmit",
-    "cypress:open": "cypress open"
+    "cypress": "cypress open",
+    "cypress:all": "cypress run --browser chrome"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
