--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,8 +20,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["jest"] // Add this line
+    "types": ["jest", "node"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "cypress", "./cypress.config.ts"]
 }
