--- a/turbo.json
+++ b/turbo.json
@@ -31,6 +31,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "e2e": {
+      "dependsOn": ["frontend"],
+      "cache": false
     }
   }
 }
